[package]
name = "subtitle"
description = "Find & download subtitles from the terminal."
version = "1.0.4"
authors = ["Aman Harwara <amanharwara@protonmail.com>"]
edition = "2018"
homepage = "https://github.com/amanharwara/subtitle"
repository = "https://github.com/amanharwara/subtitle"
license = "GPL-3.0-or-later"
keywords = ["subtitle", "subdb", "opensubtitles"]
categories = ["command-line-utilities"]
readme = "README.md"
exclude = ["test_videos/*"]

[dependencies]
md-5 = "0.10.0"
reqwest = { version = "0.11", features = ["blocking", "json"] }
clap = "3.0.0-rc.8"
directories = "4.0"
thiserror = "1.0.22"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dialoguer = "0.9.0"
colored = "2.0.0"
